# oolog

./: .kateproject  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/: oolog.h
include/printers/: ColoredLogPrinter.h  Console.h  ConsoleLogPrinter.h  EndlLogPrinter.h  Fake.h  FakePrinter.h  File.h  FileLogPrinter.h  Printer.h  RotatedFile.h  RotatedFileWithHistory.h  TimestampedLogPrinter.h  TypedLogPrinter.h  endlLogPrinter.h
include/printers/decorators/: Color.h  ColorANSI.h  ColorWin32Console.h  Decorator.h  Level.h  NewLine.h  Split.h  Timestamp.h
sample/: CMakeLists.txt  main.cpp
samples/: CMakeLists.txt
samples/001_files_included_in_project/: CMakeLists.txt  main.cpp
samples/002_linked_with_library/: CMakeLists.txt  main.cpp
samples/003_printers/: CMakeLists.txt  main.cpp
samples/004_thread_safety/: CMakeLists.txt  main.cpp
samples/005_log_to_file/: CMakeLists.txt  main.cpp
samples/006_log_split_to_cmd_and_file/: CMakeLists.txt  main.cpp
samples/007_rotated_log_without_history/: CMakeLists.txt  main.cpp
samples/008_rotated_log_with_history/: CMakeLists.txt  main.cpp
samples/009_debug_log/: CMakeLists.txt  main.cpp
samples/010_logging_custom_objects/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  oolog.cpp  version.h.in
src/printers/: ColoredLogPrinter.cpp  Console.cpp  ConsoleLogPrinter.cpp  EndlLogPrinter.cpp  Fake.cpp  FakePrinter.cpp  File.cpp  FileLogPrinter.cpp  RotatedFile.cpp  RotatedFileWithHistory.cpp  TimestampedLogPrinter.cpp  TypedLogPrinter.cpp
src/printers/decorators/: Color.cpp  ColorANSI.cpp  ColorWin32Console.cpp  Decorator.cpp  Level.cpp  NewLine.cpp  Split.cpp  Timestamp.cpp
src/utils/: lock.h
test/: CMakeLists.txt  LogUnitTest.cpp  RotatedFileTest.cpp  RotatedFileUnitTest.cpp  main.cpp  oologTest.cpp
